# JerryMouse

./: BaseHttpResponse.cpp  CMakeLists.txt  Exception.cpp  HttpRequest.cpp  HttpResponse.cpp  IOCPHttpResponse.cpp  Log.cpp  Logger.cpp  MiniWebServer.cpp  MsgQueue.cpp  QA.md  README.md  TaskQueue.cpp  ThreadPool.cpp  ThreadSafePrint.cpp  Util.cpp  main.cpp  stat.xlsx  test.cpp  util.cpp  压力测试.md  性能测试.md
common/: CrossPlatform.h  HttpResponse.cpp  HttpServer.cpp  Logger.cpp  MiniWebServer.cpp  OS_util.cpp  SyncQueue.cpp  ThreadPool.cpp  WebServer.cpp  util.cpp
include/: CrossPlatform.h  FileHelper.h  Logger.h  OSHelper.cpp  OS_util.cpp  SocketHelper.h  SyncQueue.h  ThreadPool.cpp  ThreadPool.h  util.cpp  util.h
root/: 404.html  default.html
src/: MiniWebServer.cpp  ThreadPool.cpp
test/: TestHttpRequest.cpp  TestHttpResponse.cpp
v0_one_thread/: HttpServer_v0.h  README.md  main_v0.cpp
v1/: Log.cpp  MiniWebServer.cpp  README.md  main_v1.cpp  性能测试_v1.md
v1.1/: MiniWebServer_v1.1.cpp  main_v1.1.cpp
v1_1_threadpool/: HttpServer_v1_1.h  MiniWebServer_v1.1.cpp  README.md  WebServer_v1_1.cpp  main_v1_1.cpp
v1_per_connection_per_thread/: HttpServer_v1.h  README.md  WebServer_v1.cpp  main_v1.cpp
v2/: HttpRequest.cpp  HttpResponse.cpp  Log.cpp  MiniWebServer.cpp  MiniWebServer_v2.cpp  README.md  SyncQueue.cpp  TaskQueue.cpp  ThreadPool.cpp  main_v2.cpp  util.cpp
v2.1/: README.md
v2_1_poll_threadpool/: MiniWebServer_v2_1.cpp  README.md  WebServer_v2_1.cpp  main_v2_1.cpp
v2_2_reactor/: Acceptor.cpp  Acceptor.h  BaseHandler.h  Event.h  EventDemultiplexer.h  EventHandler.h  Handler.cpp  Handler.h  HttpServer_v2_2.cpp  Processor.cpp  Processor.h  README.md  Reactor.cpp  Reactor.h  ReadHandler.h  SelectDemultiplexer.cpp  SelectDemultiplexer.h  WriteHandler.h  convention.h  main_v2_2.cpp
v2_select_threadpool/: HttpServer_v2.cpp  HttpServer_v2.h  MiniWebServer_v2.cpp  README.md  WebServer_v2.cpp  main_v2.cpp
v3/: MiniWebServer.cpp  README.md  main_v3.cpp
v3_epoll_threadpool/: HttpServer_v3.cpp  MiniWebServer.cpp  MiniWebServer_v3.cpp  README.md  main_v3.cpp
v4/: IOCPHttpResponse.cpp  MiniWebServer.cpp  README.md  main_v4.cpp
v4.1/: IOCPHttpResponse.cpp  README.md  main_v4.cpp
v4_1_acceptEx_IOCP_threadpool/: HttpServer_v4_1.h  IOCPHttpResponse.cpp  MiniWebServer.cpp  README.md  main_v4.cpp  main_v4_1.cpp
v4_2_proactor/: AsyncOperationProcessor.cpp  AsyncOperationProcessor.h  Handler.cpp  Handler.h  Proactor.cpp  Proactor.h  ProactorInitiator.cpp  ProactorInitiator.h  README.md
v4_IOCP_threadpool/: HttpServer_v4.h  IOCPHttpResponse.cpp  README.md  (+2 more)
(+13 files in other folders)
